# Python_project

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  temporary.py
app/: main.py
migration/versions/: 180357f261bb_add_new_tables.py  63a30ef089e9_add_more_tables.py  76d9b36c70ef_add_roomtype_table.py  7fb9eb55ab4d_add_hotels_table.py
src/: main.py
src/project/api/: bookings_routes.py  clients_routes.py  feedback_routes.py  hotels_routes.py  payment_types_routes.py  rooms_routes.py  roomtype_routes.py  service_routes.py  service_usage_routes.py  stays_routes.py
src/project/core/: config.py  exceptions.py
src/project/infrastructure/postgres/: models.py
src/project/infrastructure/postgres/repository/: bookings_repo.py  clients_repo.py  feedback_repo.py  hotels_repo.py  payment_types_repo.py  rooms_repo.py  roomtypes_repo.py  service_usage_repo.py  services_repo.py  stays_repo.py
src/project/schemas/: bookings.py  clients.py  feedback.py  hotels.py  payment_types.py  rooms.py  roomtypes.py  service_usage.py  services.py  stays.py
